# ks-heroes-api

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_STEPS.md  README.md  TROOPS_API.md  pyproject.toml  test_api.py
.changeset/: troops-grouped-response.md
.github/: copilot-instructions.md
.github/agents/: ks-heroes-agent.agent.md
.github/chatmodes/: ks-heroes-agent.chatmode.md
.github/prompts/: conventional-commit.prompt.md
data/: VIP levels.yml  exclusive_gear.json  governor_gear_charm_levels.json  governor_gear_charms.json  governor_gear_gear.json  governor_gear_levels.json  governor_gear_names.json  hero_charm_levels.json  hero_charms.json  hero_gear.json  hero_gear_levels.json  hero_skills.json  heroes.json  heroes_conquest_base.json  heroes_expedition_base.json  terms.md  troop-stats-normalized.json  troop_training_data.json  vip_levels.json
scripts/: fetch_base_stats.py  generate_seed_sql.py  normalize-troops-json.py  organize_assets.py  organize_troop_assets.py  upload_assets.py
src/: dependencies.py  main.py  settings.py
src/db/: repository_base.py  storage.py  supabase_client.py  utils.py
src/models/: __init__.py  exclusive_gear.py  hero.py  skills.py  stats.py  talent.py
src/routes/: __init__.py  exclusive_gear.py  governor_gear.py  heroes.py  skills.py  stats.py  talents.py  troops.py  vip.py
src/schemas/: __init__.py  enums.py  exclusive_gear.py  governor_gear.py  hero.py  skills.py  stats.py  talent.py  vip.py  (+1 more)
supabase/: DATABASE.md  config.toml  seed.sql
tests/: test_governor_gear_calculator.py  test_troop_training_schema.py
(+42 files in other folders)
